<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_bar_height"
        android:background="@color/actionbar_green1"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:weightSum="1">
        <!--
         <WebView
                android:id="@+id/webView"
                android:layout_width="200px"
                android:layout_height="200px"
                android:layout_gravity="center"
                android:layout_marginTop="30px" />
        -->
        <TextView

            android:id="@+id/textViewMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:autoText="false"
            android:gravity="center"
            android:text="Penguins Safe! "
            android:textColor="#000000"
            android:textSize="20dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewMain"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/relativeLayout">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="right"
                android:contentDescription="Main Image"
                android:src="@drawable/gift"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/imageView" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:weightSum="1">

                <TextView

                    android:id="@+id/tvProgressPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoText="false"
                    android:gravity="center"
                    android:text="100%"
                    android:textColor="#000000"
                    android:textSize="35dp"
                    android:layout_weight="7.54" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="@string/OfPenguinsSaved"
                    android:id="@+id/tvPercentOutOf"
                    android:textSize="20dp" />


                <!--<TextView-->

                <!--android:id="@+id/tvRequiredAmount"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:autoText="false"-->
                <!--android:gravity="center"-->
                <!--android:text="10000"-->
                <!--android:layout_marginTop="5dip"-->
                <!--android:textColor="#000000"-->
                <!--android:textSize="25dp" />-->

                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
                <!--android:layout_marginTop="5dip"-->
                <!--android:text="@string/Wrequired"-->
                <!--android:id="@+id/tvWrequired"-->
                <!--android:layout_below="@+id/tvRequiredAmount" />-->
            </LinearLayout>

        </RelativeLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/logout"
                android:layout_width="0px"
                android:layout_height="0px"
                android:background="@null"
                android:text="Logout"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"

                />

        </LinearLayout>


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnSubmit_bg"
            android:text="@string/Submit"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:layout_above="@+id/btnNotHome"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnNotHome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnNotHome_bg"
            android:text="@string/NotHome"
            android:textColor="#FFFFFF"
            android:layout_gravity="bottom"
            android:textSize="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:id="@+id/llBoiler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/llLightBulb"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:contentDescription="background"
                android:src="@mipmap/yellow_box" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Boiler"
                android:textColor="#000000"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingRight="20dp">

                <CheckBox
                    android:id="@+id/chkBoxBoiler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/llBoiler"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:contentDescription="background"
                android:src="@mipmap/green_box" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Oven"
                android:textColor="#000000"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingRight="20dp">

                <CheckBox
                    android:id="@+id/chkBoxOven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:clickable="false" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLightBulb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="60dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:contentDescription="background"
                android:src="@mipmap/blue_box" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LightBulb"
                android:textColor="#000000"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingRight="20dp">

                <CheckBox
                    android:id="@+id/chkBoxLightBulb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:clickable="false"

                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>